--- a/tributepage/albums.html
+++ b/tributepage/albums.html
@@ -19,7 +19,7 @@
 <div class="container">
      <div class="menu">
         <ul>
-		    <li class="logo"><img src="images/logo.png"></li>
+		    <li class="logo"> <a href="TributePage.html"> <img src="images/logo.png"></a></li>
 		    <li><a href="TributePage.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="albums.html">Albums</a></li>
