--- a/tributepage/TributePage.html
+++ b/tributepage/TributePage.html
@@ -3,7 +3,7 @@
 <head>
   <script src="https://use.fontawesome.com/7d6a91324a.js"></script>
   <meta charset="utf-8">
-  <meta name="description" content="NLE Choppas biggest hits and highlights in one page"> <!-- Change the content and add a short description of your web page -->
+  <meta name="description" content="About NLE Choppa and his biggest albums"> <!-- Change the content and add a short description of your web page -->
   <meta name="author" content="Omar Basovic"> <!-- Change the content and add your name -->
 
   <title>NLE Choppa Tribute</title>
